# uisce

./: .gitignore  README.md  build_inferred_cases.py  infer_duration.py  main.py  pyproject.toml
.github/workflows/: build.yml  ci.yml
data/: inferred_duration.jsonl  sa_pop.csv
data/eval/: end_time_sample.csv  end_time_sample_2026-07-18_gemma-4-12b-qat_pv1.csv  end_time_sample_2026-07-19_gemma-4-12b-qat_pv2.csv
notes/: boil-notices.md  data-quality.md  end-time-eval.md  model-and-runtime-benchmarks.md  pipeline-dependencies.md  population-data-sources.md  statuspage-methodology.md  water-sla-benchmarks.md
src/uisce/: build.py  config.py  eval_end_time.py  eval_replay.py  inference.py  pipeline.py  replay_closed_at.py  sa_pop.py  site.html  site.py
tests/: test_build.py  test_eval_end_time.py  test_eval_replay.py  test_inference.py  test_pipeline.py  test_replay_closed_at.py  test_site.py
