[project]
name = "uisce"
version = "1.0.0"
description = "Download, transform, and geocode Uisce Éireann cases"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.0.0",
    "pyproj>=3.7.2",
    "requests>=2.34.2",
]

[project.scripts]
uisce-pipeline = "uisce.pipeline:main"
uisce-backfill = "uisce.pipeline:backfill"
uisce-infer = "uisce.inference:run"
uisce-build-inferred = "uisce.build:run"
uisce-site = "uisce.site:run"
uisce-fetch-sa-pop = "uisce.sa_pop:run"
uisce-eval-sample = "uisce.eval_end_time:sample"
uisce-eval-sample-fresh = "uisce.eval_end_time:sample_fresh"
uisce-eval-score = "uisce.eval_end_time:score"
uisce-eval-replay = "uisce.eval_replay:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
